--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,67 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 
+h3 {
+  text-align: right;
+  font-weight: bold;
+}
+
+p {
+  margin: .5em;
+}
+
+.container {
+  display: flex;
+}
+
+.main {
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.textbox {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.welcome {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.menu {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  width: 80%;
+  justify-content: center;
+}
+
+.imglink {
+  margin: 50px;
+  width: 130px;
+  flex-basis: auto;
+}
+
+.footer {
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.bottom {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+footer div a {
+  margin: 1em;
+}
